--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
-﻿*.csv filter=lfs diff=lfs merge=lfs -text
-*.xlsx filter=lfs diff=lfs merge=lfs -text
-*.zip filter=lfs diff=lfs merge=lfs -text
-*.parquet filter=lfs diff=lfs merge=lfs -text
+* text=auto
+*.sh    text eol=lf
+*.ps1   text eol=crlf
+*.py    text eol=lf
+*.sql   text eol=lf
+*.ipynb text eol=lf
